# ComfyUI-Video-Matting

./: .gitignore  README.md  __init__.py  config.yaml  example_matting_workflow.json  pyproject.toml  requirements.txt
comfyui_vidmatt/: utils.py
comfyui_vidmatt/briaai_rembg/: __init__.py  arch.py
comfyui_vidmatt/robust_video_matting/: __init__.py
